force-app/main/default/objects/Stage_Task__mdt.object
<CustomObject>
    <fields>
        <fullName>Assignee_Username__c</fullName>
        <label>Assignee Username</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date_Offset__c</fullName>
        <label>Due Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Receipt</fullName>
                    <default>true</default>
                    <label>Receipt</label>
                </value>
                <value>
                    <fullName>Advertising (Internal)</fullName>
                </value>
                <value>
                    <fullName>Investigating</fullName>
                </value>
                <value>
                    <fullName>Advertising (External)</fullName>
                </value>
                <value>
                    <fullName>Awaiting Grant</fullName>
                </value>
                <value>
                    <fullName>Liquidation</fullName>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Put Away</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Stage Task</label>
    <pluralLabel>Stage Tasks</pluralLabel>
</CustomObject>